# kale

./: README.md  pyproject.toml
backend/kale/: cli.py  compiler.py  pipeline.py  step.py
backend/kale/config/: validators.py
backend/kale/processors/: nbprocessor.py
backend/kale/rpc/: kfp.py  nb.py
examples/base/: candies_sharing.ipynb
examples/openvaccine-kaggle-competition/: open-vaccine.ipynb
examples/pytorch-classification/: cifar10_classification.ipynb
examples/rag/: portable_rag_langchain.ipynb
examples/taxi-cab-classification/: taxicab_pipeline.ipynb
examples/titanic-ml-dataset/: titanic_dataset_ml.ipynb
kale/: __init__.py  cli.py  compiler.py  pipeline.py
kale/common/: kfp_authenticator.py  kfp_client_factory.py  kfputils.py
kale/config/: kfp_server_config.py  validators.py
kale/processors/: nbprocessor.py
kale/rpc/: kfp.py
labextension/: eslint.config.mjs  package.json
labextension/schema/: kale-settings.json
labextension/src/: widget.tsx
labextension/style/: index.css
prototypes/: REPRODUCE.md
prototypes/kfp_nesting_demo/: README.md  composed_workflow.yaml  nesting_demo.py  submit.py
prototypes/minimal-workflow-widget/: .gitignore  README.md  example.demo-workflow  package.json  pyproject.toml  tsconfig.json
prototypes/minimal-workflow-widget/minimal_workflow_widget/: __init__.py
prototypes/minimal-workflow-widget/src/: WorkflowWidget.tsx  index.ts
prototypes/notebook_component_demo/: README.md  data_prep.ipynb  notebook_component_demo.py  notebook_workflow.yaml  submit.py  train.ipynb
(+34 files in other folders)
